dodate stranice sa montaznim objektima

--- a/celicna-nadstresnica.html
+++ b/celicna-nadstresnica.html
@@ -51,7 +51,12 @@
           <li><a href="usluge.html">Usluge</a></li>
           <li class="dropdown"><a href="#"><span>Projekti</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="projekat-u-toku.html">Montažni objekti</a></li>
+              <li class="dropdown"><a href="#"><span>Montažni objekti</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                <ul>
+                  <li><a href="montazni-objekti-classic.html">Klasični</a></li>
+                  <li><a href="montazni-objekti-a-frame.html">A-frame</a></li>
+                </ul>
+              </li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
