--- a/montazni-objekti-classic.html
+++ b/montazni-objekti-classic.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>VB Inženjering - 3D arhitektura hale</title>
+    <title>VB Inženjering - Montažni objekti u klasičnom stilu</title>
     <meta content="" name="description">
-        <meta content="" name="keywords">
+    <meta content="" name="keywords">
 
     <!-- Favicons -->
     <link href="assets/img/logo/logoIcon.ico" rel="icon">
@@ -71,7 +71,8 @@
                                 <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                                 <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
                             </ul>
-                        </li>                    </ul>
+                        </li>
+                    </ul>
                 </li>
                 <li><a href="kontakt.html">Kontakt</a></li>
                 <li><a href="index.html#team">O nama</a></li>
@@ -87,18 +88,18 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-            <h2>3D arhitektura hale</h2>
+            <h2>Montažne kuće u klasičnom stilu</h2>
             <ol>
                 <li><a href="index.html">Početna stranica</a></li>
                 <li><a href="projekti.html">Projekti</a></li>
-                <li>Detalji projekta</li>
+                <li>Klasični montažni objekti</li>
             </ol>
 
         </div>
     </div><!-- End Breadcrumbs -->
 
     <!-- ======= Projet Details Section ======= -->
-    <section id="project-details" class="project-details">
+    <section id="project-details-3" class="project-details">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
 
             <div class="position-relative h-100">
@@ -106,33 +107,14 @@
                     <div class="swiper-wrapper align-items-center">
 
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/1.jpg" alt="">
+                            <img src="assets/img/projects/montazni/klasicni/klasik1.jpeg" alt="">
                         </div>
-
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/2.jpg" alt="">
+                            <img src="assets/img/projects/montazni/klasicni/klasik2.jpeg" alt="">
                         </div>
-
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/3.jpg" alt="">
+                            <img src="assets/img/projects/montazni/klasicni/klasik3.jpeg" alt="">
                         </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/4.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/5.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/6.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/7.jpg" alt="">
-                        </div>
-
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
@@ -145,21 +127,13 @@
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>This is an example of portfolio detail</h2>
+                        <h2>NASLOV</h2>
                         <p>
                             Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
                         </p>
                         <p>
                             Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
                         </p>
-
-                        <p>
-                            Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-
-                        <p>
-                            Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-                        </p>
-
                     </div>
                 </div>
 
@@ -167,7 +141,7 @@
                     <div class="portfolio-info">
                         <h3>Informacije</h3>
                         <ul>
-                            <li><strong>Kategorija</strong> <span>Čelične konstrukcije</span></li>
+                            <li><strong>Kategorija</strong> <span>Montažni objekti</span></li>
                             <li><strong>Izrađeno</strong> <span>2025.</span></li>
                         </ul>
                     </div>
@@ -175,6 +149,54 @@
 
             </div>
 
+        </div>
+    </section><!-- End Projet Details Section -->
+
+    <section id="project-details-4" class="project-details" style="padding-top: 0;">
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="position-relative h-100">
+                <div class="slides-1 portfolio-details-slider swiper">
+                    <div class="swiper-wrapper align-items-center">
+
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/montazni/klasicni/klasik4.jpeg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/montazni/klasicni/klasik5.jpeg" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+            </div>
+
+            <div class="row justify-content-between gy-4 mt-4">
+
+                <div class="col-lg-8">
+                    <div class="portfolio-description">
+                        <h2>NASLOV</h2>
+                        <p>
+                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                        </p>
+                        <p>
+                            Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="portfolio-info">
+                        <h3>Informacije</h3>
+                        <ul>
+                            <li><strong>Kategorija</strong> <span>Montažni objekti</span></li>
+                            <li><strong>Izrađeno</strong> <span>2025.</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </section><!-- End Projet Details Section -->
 
@@ -212,6 +234,7 @@
                 <div class="col-lg-1 col-md-4 footer-links">
                     <strong><a href="kontakt.html">Kontakt</a></strong>
                 </div><!-- End footer links column-->
+
             </div>
         </div>
     </div>
