--- a/projekti.html
+++ b/projekti.html
@@ -50,7 +50,12 @@
           <li><a href="usluge.html">Usluge</a></li>
           <li class="dropdown"><a href="#"><span>Projekti</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="projekat-u-toku.html">Montažni objekti</a></li>
+              <li class="dropdown"><a href="#"><span>Montažni objekti</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                <ul>
+                  <li><a href="montazni-objekti-classic.html">Klasični</a></li>
+                  <li><a href="montazni-objekti-a-frame.html">A-frame</a></li>
+                </ul>
+              </li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
@@ -65,7 +70,8 @@
                   <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                   <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
                 </ul>
-              </li>            </ul>
+              </li>
+            </ul>
           </li>
           <li><a href="kontakt.html">Kontakt</a></li>
           <li><a href="index.html#team">O nama</a></li>
@@ -95,7 +101,6 @@
       <div class="container" data-aos="fade-up">
 
         <div class="portfolio-isotope" data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order">
-
           <ul class="portfolio-flters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="celik-vizualizacije" class="filter-active" >Svi projekti</li>
             <li data-filter=".filter-celik" class="portfolio-item filter-celik">Čelične konstrukcije</li>
@@ -114,7 +119,7 @@
                 <div class="portfolio-info">
                   <h4>Nadstrešnica</h4>
                   <p>Konstrukcijsko rešenje nadstrešnice</p>
-                  <a href="assets/img/projects/nadstresnica/4.png" title="Nadstrešnica" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/projects/nadstresnica/4.png" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="celicna-nadstresnica.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -126,7 +131,7 @@
                 <div class="portfolio-info">
                   <h4>Hala 1</h4>
                   <p>3D arhitektura hale</p>
-                  <a href="assets/img/projects/hala1/4.jpg" title="3D arhitektura hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/projects/hala1/4.jpg" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="3D-arhitektura-hale.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -138,7 +143,7 @@
                 <div class="portfolio-info">
                   <h4>Hala 2</h4>
                   <p>3D konstrukcija hale</p>
-                  <a href="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" title="3D konstrukcija hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="3D-konstrukcija-hale.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -148,8 +153,42 @@
                 <p>Novi projekti su u toku...</p>
             </div><!-- End Projects Item -->
 
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-montazni">
-              <p>Novi projekti su u toku...</p>
+              <div class="portfolio-content h-100">
+                <img src="assets/img/projects/montazni/klasicni/klasik1.jpeg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Kuća 1</h4>
+                  <p>Kuća u klasičnom stilu</p>
+                  <a href="assets/img/projects/montazni/klasicni/klasik1.jpeg" data-gallery="portfolio-gallery-montazni" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="montazni-objekti-classic.html#project-details-3" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Projects Item -->
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-montazni">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/projects/montazni/aFrame/ostaleKuce/aframe.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Kuće u A-frame stilu</h4>
+                  <p>Veliki izbor različitih kuća</p>
+                  <a href="assets/img/projects/montazni/aFrame/ostaleKuce/aframe.png" data-gallery="portfolio-gallery-montazni" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="montazni-objekti-a-frame.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Projects Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-montazni">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/projects/montazni/klasicni/klasik5-cut.jpeg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Kuća 2</h4>
+                  <p>Dizajn modernog stambenog objekta</p>
+                  <a href="assets/img/projects/montazni/klasicni/klasik5.jpeg" data-gallery="portfolio-gallery-montazni" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="montazni-objekti-classic.html#project-details-4" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-sanacije">
@@ -162,7 +201,7 @@
                 <div class="portfolio-info">
                   <h4>Vikendica</h4>
                   <p>Eksterijer stambenog objekta</p>
-                  <a href="assets/img/projects/eksterijeri/1.jpeg" title="Eksterijer vikendice" data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/projects/eksterijeri/1.jpeg"  data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="dizajn-eksterijera.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -173,8 +212,8 @@
                 <img src="assets/img/projects/enterijeri/apartman/1.jpeg" class="img-fluid" alt="3D vizualizacija modernog stana ili apartmana sa svetlo sivim kaučima i plavim jastucima.">
                 <div class="portfolio-info">
                   <h4>Apartman</h4>
-                  <p>Enterijer stambenog objekta</p>
-                  <a href="assets/img/projects/enterijeri/apartman/1.jpeg" title="Enterijer apartmana" data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <p>Enterijer apartmana</p>
+                  <a href="assets/img/projects/enterijeri/apartman/1.jpeg"  data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="dizajn-enterijera.html#project-details-2" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -186,7 +225,7 @@
                 <div class="portfolio-info">
                   <h4>Zubarska ordinacija</h4>
                   <p>Enterijer zubarske ordinacije</p>
-                  <a href="assets/img/projects/enterijeri/ordinacija/1.jpeg" title="Enterijer zubarske ordinacije" data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/projects/enterijeri/ordinacija/1.jpeg"  data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="dizajn-enterijera.html#project-details-1" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
