--- a/montazni-objekti-a-frame.html
+++ b/montazni-objekti-a-frame.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>VB Inženjering - 3D arhitektura hale</title>
+    <title>VB Inženjering - Montažni objekti u A-frame stilu</title>
     <meta content="" name="description">
-        <meta content="" name="keywords">
+    <meta content="" name="keywords">
 
     <!-- Favicons -->
     <link href="assets/img/logo/logoIcon.ico" rel="icon">
@@ -29,12 +28,23 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 
 </head>
 
+<style>
+    .gallery-img {
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .gallery-img:hover {
+        transform: scale(1.05);
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    }
+</style>
+
 <body>
 
-<!-- ======= Header ======= -->
 <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
@@ -71,7 +81,8 @@
                                 <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                                 <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
                             </ul>
-                        </li>                    </ul>
+                        </li>
+                    </ul>
                 </li>
                 <li><a href="kontakt.html">Kontakt</a></li>
                 <li><a href="index.html#team">O nama</a></li>
@@ -87,79 +98,82 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-            <h2>3D arhitektura hale</h2>
+            <h2>Montažne kuće u A-frame stilu</h2>
             <ol>
                 <li><a href="index.html">Početna stranica</a></li>
                 <li><a href="projekti.html">Projekti</a></li>
-                <li>Detalji projekta</li>
+                <li>A-frame montažni objekti</li>
             </ol>
 
         </div>
     </div><!-- End Breadcrumbs -->
 
-    <!-- ======= Projet Details Section ======= -->
-    <section id="project-details" class="project-details">
-        <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <section class="py-5 bg-light">
+        <div class="container">
+            <div class="row align-items-center">
 
-            <div class="position-relative h-100">
-                <div class="slides-1 portfolio-details-slider swiper">
-                    <div class="swiper-wrapper align-items-center">
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/1.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/2.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/3.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/4.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/5.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/6.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/hala1/7.jpg" alt="">
-                        </div>
-
-                    </div>
-                    <div class="swiper-pagination"></div>
+                <div class="col-lg-6">
+                    <h3 class="mb-4">Savršena ravnoteža dizajna i funkcionalnosti</h3>
+                    <p class="mb-3">
+                        TEKST....
+                    </p>
                 </div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+
+                <div class="col-lg-6">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/1.jpeg" alt="Slika 1" class="img-fluid rounded shadow-sm">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/2.jpeg" alt="" class="img-fluid rounded shadow-sm">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/3.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/4.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/5.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/6.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/7.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/8.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/9.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                            </div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
+                </div>
 
             </div>
+        </div>
+    </section>
 
+    <!-- ======= Projet Details Section ======= -->
+    <section id="project-details-5" class="project-details">
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
             <div class="row justify-content-between gy-4 mt-4">
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>This is an example of portfolio detail</h2>
+                        <h2>NASLOV</h2>
                         <p>
                             Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
                         </p>
                         <p>
                             Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
                         </p>
-
-                        <p>
-                            Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-
-                        <p>
-                            Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-                        </p>
-
                     </div>
                 </div>
 
@@ -167,16 +181,43 @@
                     <div class="portfolio-info">
                         <h3>Informacije</h3>
                         <ul>
-                            <li><strong>Kategorija</strong> <span>Čelične konstrukcije</span></li>
+                            <li><strong>Kategorija</strong> <span>Montažni objekti</span></li>
                             <li><strong>Izrađeno</strong> <span>2025.</span></li>
                         </ul>
                     </div>
                 </div>
-
             </div>
-
         </div>
     </section><!-- End Projet Details Section -->
+
+    <section class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">Dostupni modeli montažnih kuća</h2><br>
+            <div class="row g-4">
+                <div class="col-12 col-md-4">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/1.jpeg" alt="Projekat 1" class="img-fluid rounded shadow-sm gallery-img">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/2.jpeg" alt="Projekat 2" class="img-fluid rounded shadow-sm gallery-img">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/3.jpeg" alt="Projekat 3" class="img-fluid rounded shadow-sm gallery-img">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/4.jpeg" alt="Projekat 4" class="img-fluid rounded shadow-sm gallery-img">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/5.jpeg" alt="Projekat 5" class="img-fluid rounded shadow-sm gallery-img">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/6.jpeg" alt="Projekat 6" class="img-fluid rounded shadow-sm gallery-img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
 
 </main><!-- End #main -->
 
@@ -212,6 +253,7 @@
                 <div class="col-lg-1 col-md-4 footer-links">
                     <strong><a href="kontakt.html">Kontakt</a></strong>
                 </div><!-- End footer links column-->
+
             </div>
         </div>
     </div>
@@ -247,6 +289,20 @@
 <script src="assets/js/main.js"></script>
 <script src="assets/js/dropdown.js"></script>
 
-</body>
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<script>
+    const swiper = new Swiper('.mySwiper', {
+        loop: true,
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+    });
+</script>
 
+</body>
 </html>
